--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <div>
             <ul class="nav-links">
                 <li><a href="#about">About</a></li>
+                <li><a href="#skill">Skills</a></li>
                 <li><a href="#projects">Projects</a></li>
                 <li><a href="#contact">Contact</a></li>
             </ul>
@@ -28,6 +29,7 @@
             </div>
             <div class="menu-links"">
                 <li><a href="#about" onclick="toogleMenu()">About</a></li>
+                <li><a href="#about" onclick="toogleMenu()">Skills</a></li>
                 <li><a href="#projects" onclick="toogleMenu()">Projects</a></li>
                 <li><a href="#contact" onclick="toogleMenu()">Contact</a></li>
             </div>
@@ -98,10 +100,10 @@
         <img src="./assets/arrow-down.png" 
         alt="down arrow"  
         class="Icon arrow" 
-        onclick="location.href='./#Skills'"
+        onclick="location.href='./#skill'"
         >
     </section>
-    <section id="Skills">
+    <section id="skill">
         <p class="section_text_p1">Explore My</p>
         <h1 class="title">Skills</h1>
         <div class="about-container">
