desktop version is completed

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     </nav>
     <section id="profile">
         <div class="selection_pic-container">
-            <img src="./assets/profilepic.JPG" alt="vishal sah profile picture">
+            <img src="./assets/profilepic.png" alt="vishal sah profile picture">
         </div>
         <div class="section_text">
             <p class="section_text_p1">
@@ -108,11 +108,123 @@
         <h1 class="title">Skills</h1>
         <div class="about-container">
             <div class="detail-container">
-                <h2 class="skills-sub-title"></h2>
+                <h2 class="skills-sub-title">Android Development</h2>
+                <div class="article-container">
+                    <article>
+                        <img src="./assets/experience.png"
+                         alt="Experience icon" 
+                         class="Icon"
+                         >
+                         <div>
+                            <H3>Flutter</H3>
+                            <p>Experience</p>
+                         </div>
+                    </article>
+                    <article>
+                        <img src="./assets/experience.png"
+                         alt="Experience icon" 
+                         class="Icon"
+                         >
+                         <div>
+                            <H3>Dart</H3>
+                            <p>Experience</p>
+                         </div>
+                    </article>
+                    <article>
+                        <img src="./assets/experience.png"
+                         alt="Experience icon" 
+                         class="Icon"
+                         >
+                         <div>
+                            <H3>Android Studio</H3>
+                            <p>Experience</p>
+                         </div>
+                    </article>
+                    <article>
+                        <img src="./assets/experience.png"
+                         alt="Experience icon" 
+                         class="Icon"
+                         >
+                         <div>
+                            <H3>Kotlin</H3>
+                            <p>Experience</p>
+                         </div>
+                    </article>
+                    <article>
+                        <img src="./assets/experience.png"
+                         alt="Experience icon" 
+                         class="Icon"
+                         >
+                         <div>
+                            <H3>Javascript</H3>
+                            <p>Experience</p>
+                         </div>
+                    </article>
+                </div>
+            </div>
+            <div class="detail-container">
+                <h2 class="skills-sub-title">Back-End Development</h2>
+                <div class="article-container">
+                    <article>
+                        <img src="./assets/experience.png"
+                         alt="Experience icon" 
+                         class="Icon"
+                         >
+                         <div>
+                            <H3>Node.js</H3>
+                            <p>Experience</p>
+                         </div>
+                    </article>
+                    <article>
+                        <img src="./assets/experience.png"
+                         alt="Experience icon" 
+                         class="Icon"
+                         >
+                         <div>
+                            <H3>MYSQL</H3>
+                            <p>Experience</p>
+                         </div>
+                    </article>
+                    <article>
+                        <img src="./assets/experience.png"
+                         alt="Experience icon" 
+                         class="Icon"
+                         >
+                         <div>
+                            <H3>MongoDB</H3>
+                            <p>Experience</p>
+                         </div>
+                    </article>
+                    <article>
+                        <img src="./assets/experience.png"
+                         alt="Experience icon" 
+                         class="Icon"
+                         >
+                         <div>
+                            <H3>Express.js</H3>
+                            <p>Experience</p>
+                         </div>
+                    </article>
+                    <article>
+                        <img src="./assets/experience.png"
+                         alt="Experience icon" 
+                         class="Icon"
+                         >
+                         <div>
+                            <H3>firebase</H3>
+                            <p>Experience</p>
+                         </div>
+                    </article>
+                </div>
             </div>
         </div>
+        <img src="./assets/arrow-down.png" 
+        alt="down arrow"  
+        class="Icon arrow" 
+        onclick="location.href='./#projects'"
+        />
     </section>
-    <!-- <section id="projects">
+    <section id="projects">
         <p class="section_text_p1">
             Browse My Recent
         </p>
@@ -187,7 +299,53 @@
             </div>
         </div>
         </div> 
-    </section> -->
+        <img src="./assets/arrow-down.png" 
+        alt="down arrow"  
+        class="Icon arrow" 
+        onclick="location.href='./#contact'"
+        />
+    </section>
+    <section id="contact">
+        <p class="section_text_p1">
+            Get in Touch
+        </p>
+        <h1 class="title">Contact Me</h1>
+        <div class="contact-info-upper-container">
+            <div class="contact-info-container">
+                <img src="./assets/gmail.png" 
+                alt="Email icon" 
+                class="Icon contact-icon email-icon">
+                <p>
+                    <a href="mailto:vishalk74064@gmail.com">
+                    vishalk74064@gmail.com
+                    </a>
+                </p>
+            </div>
+            <div class="contact-info-container">
+                <img src="./assets/linkedin.png" 
+                alt="linkedin icon" 
+                class="Icon contact-icon">
+                <p>
+                    <a href="https://www.linkedin.com/in/weshallsah/">
+                    linkedin
+                    </a>
+                </p>
+            </div>
+        </div>
+    </section>
+    <footer>
+        <nav>
+            <div class="nav-links-container">
+                <ul class="nav-links">
+                    <li><a href="#about">About</a></li>
+                    <li><a href="#skill">Skills</a></li>
+                    <li><a href="#projects">Projects</a></li>
+                    <li><a href="#contact">Contact</a></li>
+                </ul>
+            </div>
+        </nav>
+        <p>Copyright &#169; 2024 vishal sah. All Roghts Reserved.</p>
+    </footer>
     <script src="script.js"></script>
 </body>
 </html>
