--- a/index.html
+++ b/index.html
@@ -106,6 +106,7 @@
     <section id="skill">
         <p class="section_text_p1">Explore My</p>
         <h1 class="title">Skills</h1>
+        <div class="experience-detail-container">
         <div class="about-container">
             <div class="detail-container">
                 <h2 class="skills-sub-title">Android Development</h2>
@@ -217,6 +218,7 @@
                     </article>
                 </div>
             </div>
+        </div>
         </div>
         <img src="./assets/arrow-down.png" 
         alt="down arrow"  
